--- a/info.yml
+++ b/info.yml
@@ -4,11 +4,11 @@ project:
   teamId: '9'
   identities:
     pivotal:
-      url: 'https://www.pivotaltracker.com/n/projects/2487725'
+      url: https://www.pivotaltracker.com/n/projects/2487725
     heroku:
-      url: 'https://dashboard.heroku.com/apps/cuetocue'
+      url: https://dashboard.heroku.com/apps/cuetocue
     travis:
-      url: 'https://travis-ci.org/github/klutzx92/cuetocue/builds'
+      url: https://travis-ci.org/github/klutzx92/cuetocue/builds
   members:
     member1:
       name: 'Faiz'
