--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
   - bundle install --without production --path=${BUNDLE_PATH:-vendor/bundle}  # Install ruby gems, excluding production only gems such as unicorn (already present by default in Travis)
   - npm install                         # Install npm dependencies
   #- npm install karma-firefox-launcher codeclimate-test-reporter
-  - cucumber install
-  - rspec install
+  - gem install cucumber
+  - gem install rspec
 
 # Setup the database
 before_script: bundle exec rake db:create db:migrate
